--- a/pvn-webservice.cabal
+++ b/pvn-webservice.cabal
@@ -17,6 +17,12 @@ executable pvn-webservice
   main-is:             Main.hs
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
-                    , servant
-                    , servant-server
+                     , aeson
+                     , time
+                     , wai
+                     , warp
+                     , servant
+                     , servant-server
+                     , hlint
+                     , stylish-haskell
                        
