--- a/stack.yaml
+++ b/stack.yaml
@@ -2,14 +2,15 @@
 
 # Specifies the GHC version and set of packages available (e.g., lts-3.5, nightly-2015-09-21, ghc-7.10.2)
 # resolver: lts-3.1
-resolver: nightly-2015-10-08
+resolver: nightly-2016-04-20
+# resolver: nightly-2015-10-08
 
 # Local packages, usually specified by relative directory name
 packages:
 - '.'
 
 # Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
-extra-deps: [hasktags-0.69.1, structured-haskell-mode-1.0.20]
+extra-deps: [hasktags-0.69.1, structured-haskell-mode-1.0.20, servant-server-0.7, servant-client-0.7, servant-0.7]
 
 # Override default flag values for local packages and extra-deps
 flags: {}
